VPC_lab/terraform/routes.tf
# Private route

resource "aws_route_table" "PrivateRoute" {
    vpc_id = "${aws_vpc.main.id}"
    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = "${aws_nat_gateway.nat.id}"
    }

  tags {
    Name = "Private Route"
    Terraform = "True"  
    }
}

resource "aws_route_table_association" "private" {
    subnet_id = "${aws_subnet.private.id}"
    route_table_id = "${aws_route_table.PrivateRoute.id}"
}



# Public route

resource "aws_route_table" "PublicRoute" {
    vpc_id = "${aws_vpc.main.id}"
    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = "${aws_internet_gateway.main.id}"
    }

  tags {
    Name = "Public Route"
    Terraform = "True"  
    }
}

resource "aws_route_table_association" "public" {
    subnet_id = "${aws_subnet.public.id}"
    route_table_id = "${aws_route_table.PublicRoute.id}"
}
